--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Receive Text</title>
 
-
+    <script type="text/javascript" src="/quiet.js"></script>
+    <script type="text/javascript" src="/receivetext.js"></script>
+    <script type="text/javascript" src="/sendtext.js"></script>
+    <script async type="text/javascript" src="/quiet-emscripten.js"></script>
   </head>
   <body>
-   
+    <div class="hidden" data-quiet-profile-name="ultrasonic"></div>
+    <div class="wrapper">
       <header>
-        <h1>index</h1>
+        <h1>Receive Text</h1>
       </header>
- 
+      <section>
+      <div class="hidden" data-quiet-warning></div>
+      <pre data-quiet-receive-text-target>Your received text will show up here. Waiting...</pre>
+      </section>
+    </div>
+    <div class="hidden" data-quiet-profile-name="ultrasonic"></div>
+    <div class="wrapper">
+      <header>
+        <h1>Send Text</h1>
+      </header>
+      <section>
+      <div class="hidden" data-quiet-warning></div>
+      <div class="form-group">
+        <textarea autofocus="true" autocapitalize="none" autocomplete="off" spellcheck="off" class="form-control" style="resize:none" rows="5" data-quiet-text-input></textarea>
+      </div>
+      <button type="button" class="btn btn-default" style="width:100%" data-quiet-send-button data-quiet-sending-text="Sending...">Send</button>
+      </section>
+    </div>
   </body>
 </html>
